Coomit Change to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 listbox-combobox.js
 listbox-combo-example.js
 projectGraveyard.js
+ariafunctiontest.html
+ariafunctiontest.js
+ariafunctionutils.js
+rolestyle.css
+notes.js
